--- a/src/app/stateless-components/tag.pcss
+++ b/src/app/stateless-components/tag.pcss
@@ -1,8 +1,8 @@
 .tag-root {
     border: solid 2px color(black a(50%));
     border-radius: 0.5em;
-    color: #FFFFFF;
-    font-family: "Operator SSm Book", cursive;
+    color: #eeeeee;
+    font-family: Iosevka Pragmatic, cursive;
     font-size: 0.75em;
     font-style: italic;
     margin: 0.5em 0.25em;
